crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_revoke_api_key_manage_service_accounts.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2525
expression: response
---
{
  "data": {
    "revokeApiKey": {
      "apiKeys": [],
      "catalogName": "aliceCo/mask-bot"
    }
  },
  "errors": null
}
