crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_revoke_api_key_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2535
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "service account API key not found",
      "path": [
        "revokeApiKey"
      ]
    }
  ]
}
