crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_service_accounts_manage_service_accounts.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2208
expression: response
---
{
  "data": {
    "serviceAccounts": {
      "edges": [
        {
          "node": {
            "catalogName": "aliceCo/mask-bot",
            "grants": []
          }
        }
      ]
    }
  },
  "errors": null
}
