crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_service_accounts_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2218
expression: response
---
{
  "data": {
    "serviceAccounts": {
      "edges": []
    }
  },
  "errors": null
}
